# uvm-variant21

./: Makefile  README.md  main.py  pyproject.toml
src/: assembler.py  gui_backend.py  interpreter.py  utils.py
src/gui/: main_gui.py
src/tools/: run_tests.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: index.html
tests/: load_const.csv  load_const_encoding.csv  pow_basic_2_3.csv  pow_encoding.csv  pow_test.csv  pow_with_offset.csv  read_mem.csv  read_mem_encoding.csv  read_mem_max_offset.csv  read_mem_offset0.csv  write_mem.csv  write_mem_encoding.csv  write_mem_overwrite.csv
